add a second book and hack the cbgm script to run over both

--- a/docker/instance/eph_ph1.conf
+++ b/docker/instance/eph_ph1.conf
@@ -1,6 +1,6 @@
-APPLICATION_NAME="Gal Phase 1 test (Docker)"
-APPLICATION_ROOT="gal/ph1"
-BOOK="Galatians"
+APPLICATION_NAME="Eph Phase 1 test (Docker)"
+APPLICATION_ROOT="eph/ph1"
+BOOK="Ephesians"
 READ_ACCESS="public"
 READ_ACCESS_PRIVATE="public"
 WRITE_ACCESS="public"
@@ -8,4 +8,4 @@ WRITE_ACCESS="public"
 PGHOST="ntg-db-server"
 PGPORT="5432"
 PGUSER="ntg"
-PGDATABASE="gal_ph1"
+PGDATABASE="eph_ph1"
